--- a/Projekat/BeautyCentarL-N/BeautyCentarL-N/BeautyCentarL-N.csproj
+++ b/Projekat/BeautyCentarL-N/BeautyCentarL-N/BeautyCentarL-N.csproj
@@ -92,6 +92,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Admin.xaml.cs">
+      <DependentUpon>Admin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -108,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\drugaslika.png" />
+    <Content Include="Assets\josjednaslika.jpg" />
     <Content Include="Assets\SLIKAAA.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -123,6 +127,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Admin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
